# core

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tick.yml
ares/: __init__.py  cli.py  config.py  identity.py  memory.py  reputation.py  runtime.py  survival.py  types.py
ares/action/: __init__.py  browser.py  dispatch.py
ares/cognition/: __init__.py  critic.py  executor.py  planner.py
ares/commerce/: __init__.py  intake.py  wallet.py  x402.py
ares/perception/: __init__.py  reader.py
docs/: COMMERCE.md  LOOP.md  REPUTATION.md  THESIS.md
tests/: test_intake.py  test_reputation.py  test_survival.py  test_types.py
